[package]
name = "tiprotd"
description = "A mio-based implementation of several trivial and abadoned network protocols, with a twist"
version = "0.3.0"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
mio = {version="0.7.6", features=["os-poll", "net", "os-ext"]}
sctp = {version="0.1", optional=true}
udplite = {version="0.1", features=["mio_07"], optional=true}
posixmq = {version="1.0", features=["mio_07"], optional=true}
slab = "0.4"
chrono = "0.4"
rand = "0.7"

[target.'cfg(unix)'.dependencies] # maybe not neccessary, but I'm not testing on Windows
uds = {version="0.2.3", features=["mio_07"]}
nix = "0.14.1"
libc = "0.2.71"

[features]
dccp = []
seqpacket = []

#[target.'cfg(target_os="linux")'.features]
default = ["sctp", "udplite", "dccp", "seqpacket", "posixmq"]
#[target.'cfg(target_os="android")'.features]
#default = ["sctp", "udplite", "dccp", "seqpacket"]
#[target.'cfg(target_os="freebsd")'.features]
#default = ["sctp", "udplite", "seqpacket", "posixmq"]
#[target.'cfg(any(target_os="netbsd"))'.features]
#default = ["sctp", "seqpacket", "posixmq"]
#[target.'cfg(target_os="illumos")'.features]
#default = ["sctp", "seqpacket"] # posixmq cannot be used with mio on Illumos
#[target.'cfg(any(target_os="openbsd", target_vendor="apple"))'.features]
#default = ["seqpacket"]
#[target.'cfg(target_os="dragonfly")'.features]
#default = ["seqppacket", "posixmq"]
