[package]
name = "posixmq"
version = "0.1.0"
description = "A posix message queue wrapper that doesn't allocate"
license = "Apache-2.0 / MIT"
authors = ["Torbjørn Birch Moltu <t.b.moltu@lyse.net>"]
keywords = ["posix", "mq", "mqueue", "queue"]
edition = "2018"

[dependencies]
libc = "0.2.35" # .35 added symbols for (Free|Net|Dragonfly)BSD
mio = {version = "0.6.0", optional=true}

[lib]
path = "posix_mq.rs"
